--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "http-server -c -1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
